--- a/task4/task4_v2/app/build.gradle
+++ b/task4/task4_v2/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
 }
