--- a/task4/task4_v2/build.gradle
+++ b/task4/task4_v2/build.gradle
@@ -1,6 +1,10 @@
 buildscript {
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.13'
+    }
+    repositories {
+        google()
+        jcenter()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
